--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jdbc</artifactId>
         </dependency>
-<!--        <dependency> 不知道是使用这个还是上面那个spring-boot-starter-data-jdbc-->
+<!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-jdbc</artifactId>-->
+<!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.hsqldb</groupId>-->
+<!--            <artifactId>hsqldb</artifactId>-->
+<!--            <scope>runtime</scope>-->
 <!--        </dependency>-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
