springjpa完成mysql的增删改查

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.org.springframework.data=INFO
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 logging.level.example.springdata.jdbc.mybatis=TRACE
-spring.jpa.show-sql: true
-
+spring.jpa.show-sql:true
+#hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.Type=TRACE
 #mybatis.config-location=mybatis/mybatis-config.xml
