尝试内置数据库h2进行测试---基本集成成功

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,7 @@ spring.jpa.show-sql:true
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.Type=TRACE
+
+org.hibernate.engine.QueryParameters: debug
+org.hibernate.type.descriptor.sql.BasicBinder: trace
 #mybatis.config-location=mybatis/mybatis-config.xml
