--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <java.version>21</java.version>
         <mybatis.version>3.0.3</mybatis.version>
+        <fastjson2.version>2.0.48</fastjson2.version>
     </properties>
     <dependencies>
         <dependency>
@@ -76,7 +77,7 @@
         <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
             <artifactId>fastjson2</artifactId>
-            <version>2.0.48</version>
+            <version>${fastjson2.version}</version>
         </dependency>
     </dependencies>
 
