--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
+server.servlet.context-path=/Scaffold
 spring.application.name=Scaffold
 spring.datasource.url=jdbc:mysql://localhost:3307/test
 spring.datasource.username=root
@@ -8,11 +9,14 @@ logging.level.org.springframework.data=INFO
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 logging.level.example.springdata.jdbc.mybatis=TRACE
 spring.jpa.show-sql:true
-#hibernate ddl auto (create, create-drop, validate, update)
+#hibernate ddl auto (create, create-drop, validate, update) ???????????????????????????
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.Type=TRACE
-
+# \u6253\u5370SQL\u7684\u53C2\u6570
 org.hibernate.engine.QueryParameters: debug
 org.hibernate.type.descriptor.sql.BasicBinder: trace
 #mybatis.config-location=mybatis/mybatis-config.xml
+# \u56FD\u9645\u5316\u76F8\u5173
+spring.messages.basename=messages,config.i18n.messages
+spring.messages.fallback-to-system-locale=false
