--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ org.hibernate.type.descriptor.sql.BasicBinder: trace
 # \u56FD\u9645\u5316\u76F8\u5173
 spring.messages.basename=messages,config.i18n.messages
 spring.messages.fallback-to-system-locale=false
+#\u4F18\u96C5\u5173\u673A
+server.shutdown=graceful
+spring.lifecycle.timeout-per-shutdown-phase=20s
+
