定时任务初体验

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,9 @@ spring.messages.fallback-to-system-locale=false
 server.shutdown=graceful
 spring.lifecycle.timeout-per-shutdown-phase=20s
 
+spring.threads.virtual.enabled=true
+#\u4EFB\u52A1\u6267\u884C
+spring.task.execution.pool.max-size=16
+spring.task.execution.pool.queue-capacity=100
+spring.task.execution.pool.keep-alive=10s
+
