--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <java.version>21</java.version>
         <mybatis.version>3.0.3</mybatis.version>
         <fastjson2.version>2.0.48</fastjson2.version>
+        <awaitility.version>4.2.0</awaitility.version>
     </properties>
     <dependencies>
         <dependency>
@@ -78,6 +79,12 @@
             <groupId>com.alibaba.fastjson2</groupId>
             <artifactId>fastjson2</artifactId>
             <version>${fastjson2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${awaitility.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
