--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,14 @@ spring.datasource.url=jdbc:mysql://localhost:3307/test
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-logging.level.org.springframework.data=INFO
-logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
-logging.level.example.springdata.jdbc.mybatis=TRACE
+
 spring.jpa.show-sql:true
 #hibernate ddl auto (create, create-drop, validate, update) ???????????????????????????
 spring.jpa.hibernate.ddl-auto=update
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.Type=TRACE
+#In order to release logging resources when your application terminates, a shutdown hook that will trigger log system cleanup
+# when the JVM exits is provided.
+logging.register-shutdown-hook=false
+
 # \u6253\u5370SQL\u7684\u53C2\u6570
 org.hibernate.engine.QueryParameters: debug
 org.hibernate.type.descriptor.sql.BasicBinder: trace
