定时任务测试初体验

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,8 @@ logging.register-shutdown-hook=false
 org.hibernate.engine.QueryParameters: debug
 org.hibernate.type.descriptor.sql.BasicBinder: trace
 #mybatis.config-location=mybatis/mybatis-config.xml
+#enable pretty print
+spring.jackson.serialization.indent_output=true
 # \u56FD\u9645\u5316\u76F8\u5173
 spring.messages.basename=messages,config.i18n.messages
 spring.messages.fallback-to-system-locale=false
