--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,4 +31,7 @@ spring.threads.virtual.enabled=true
 spring.task.execution.pool.max-size=16
 spring.task.execution.pool.queue-capacity=100
 spring.task.execution.pool.keep-alive=10s
+#\u6587\u4EF6\u4E0A\u4F20
+spring.servlet.multipart.max-file-size=500KB
+spring.servlet.multipart.max-request-size=500KB
 
