--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -40,4 +40,7 @@ spring.task.execution.pool.keep-alive=10s
 spring.servlet.multipart.max-file-size=500KB
 spring.servlet.multipart.max-request-size=500KB
 
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+
 
