--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -6,8 +6,6 @@ spring.datasource.username=root
 spring.datasource.password=1234
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver \u8FD9\u4E2A\u4E0D\u7528\u914D\u7F6E\uFF0Cspringboot\u4F1A\u81EA\u52A8\u7BA1\u7406\u7684
 spring.jpa.show-sql:true
-#hibernate ddl auto (create, create-drop, validate, update) ???????????????????????????
-spring.jpa.hibernate.ddl-auto=update
 #In order to release logging resources when your application terminates, a shutdown hook that will trigger log system cleanup
 # when the JVM exits is provided.
 logging.register-shutdown-hook=false
@@ -31,5 +29,13 @@ spring.task.execution.pool.keep-alive=10s
 #\u6587\u4EF6\u4E0A\u4F20
 spring.servlet.multipart.max-file-size=500KB
 spring.servlet.multipart.max-request-size=500KB
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+# swagger-ui custom path http://localhost:8082/Scaffold/swagger-ui/index.html
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# /api-docs endpoint custom path
+#springdoc.api-docs.path=/api-docs
 
 
