--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.sql.init.schema-locations=classpath*:schema.sql
 spring.sql.init.data-locations=classpath*:data.sql
 
+spring.jpa.hibernate.ddl-auto=update
+
